added css and result box

--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
     <body>
         <div class="calculator">
             <div class="display">
+                <div id="word">
+                    <label>Result</label>
+                </div>
+                <input id="result" type="text" value="0" dir="rtl" readonly>
                 <input id="content" type="text" value="" readonly>
             </div>
             <div class = "clear-del">
