--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <button id="three" type="button" onclick="addToVariable(3)"> 3 </button>
                     
                     <button id="zero" type="button" onclick="addToVariable(0)"> 0 </button>
-                    <button id="dot" type="button"> . </button>
+                    <button id="dot" type="button" onclick="addToVariable('.')"> . </button>
                     <button id="eq" type="button" onclick="equals()"> = </button>
                     
                 </div>
